--- a/_includes/about.html
+++ b/_includes/about.html
@@ -53,12 +53,12 @@
                                               <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
                                               <li>Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
                                               <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
-                                              <li>Built a bilingual <b>Language Detector and Translator</b> for translating Hinglish (Hindi + English) customer queries into English.</li>
+                                              <li class="extra">Built a bilingual <b>Language Detector and Translator</b> for translating Hinglish (Hindi + English) customer queries into English.</li>
                                             </ul>
                                           </li>
-                                          <li><b>STR Autocomplete:</b> Developed a text auto completion module for Samsung Refrigerator wherein the text extracted from the images captured by the refrigerator camera is analyzed and corrected if read incorrectly or partially.</li>
-                                          <li><b>Adaptive Player:</b> Worked on an adaptive music player for automobile dashboards which customizes as per calendar events, person’s age, national holidays, weather, sports events as well as speed of the car.</li>
-                                          <li><b>Podcast:</b> Created a dynamic podcast application using Xamarin and RESTful APIs for faster responses.</li>
+                                          <li class="extra"><b>STR Autocomplete:</b> Developed a text auto completion module for Samsung Refrigerator wherein the text extracted from the images captured by the refrigerator camera is analyzed and corrected if read incorrectly or partially.</li>
+                                          <li class="extra"><b>Adaptive Player:</b> Worked on an adaptive music player for automobile dashboards which customizes as per calendar events, person’s age, national holidays, weather, sports events as well as speed of the car.</li>
+                                          <li class="extra"><b>Podcast:</b> Created a dynamic podcast application using Xamarin and RESTful APIs for faster responses.</li>
                                         </ul>
                                     </div>
                                     <div class="show-more">(Show More)</div>
