--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
                                     <h4 class="subheading">Samsung R&D Institute, Delhi</h4>
                                 </div>
 
-                                <div class="timeline-body show-more-height">
+                                <div class="timeline-body">
                                     <p class="text-muted">Designation: <b>Lead Engineer</b></p>
                                     <ul class="text-muted">
                                       <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
@@ -45,7 +45,7 @@
                                         <h4>July'16 - March'20</h4>
                                         <h4 class="subheading">Samsung R&D Institute, Delhi</h4>
                                     </div>
-                                    <div class="timeline-body show-more-height">
+                                    <div class="timeline-body">
                                         <p class="text-muted">Designation: <b>Engineer</b></p>
                                         <ul class="text-muted">
                                           <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
