--- a/_includes/services.html
+++ b/_includes/services.html
@@ -16,13 +16,14 @@
                       a 15.9155 15.9155 0 0 1 0 -31.831"
                   />
                   <path class="circle"
-                    stroke-dasharray="30, 100"
+                    stroke-dasharray="90, 100"
                     d="M18 2.0845
                       a 15.9155 15.9155 0 0 1 0 31.831
                       a 15.9155 15.9155 0 0 1 0 -31.831"
                   />
-                  <text x="18" y="20.35" class="percentage">30%</text>
+                  <text x="18" y="20.35" class="percentage">90%</text>
                 </svg>
+                <div> Python</div>
               </div>
 
               <div class="single-chart">
@@ -40,6 +41,7 @@
                   />
                   <text x="18" y="20.35" class="percentage">60%</text>
                 </svg>
+                <div> Python</div>
               </div>
 
               <div class="single-chart">
@@ -57,6 +59,7 @@
                   />
                   <text x="18" y="20.35" class="percentage">90%</text>
                 </svg>
+                <div> Python</div>
               </div>
             </div>
             <!-- <div class="row text-center">
