--- a/_includes/services.html
+++ b/_includes/services.html
@@ -59,7 +59,7 @@
                   />
                   <text x="18" y="20.35" class="percentage">90%</text>
                 </svg>
-                <div> Python</div>
+                <div class="single-chart-caption"> Python</div>
               </div>
             </div>
             <!-- <div class="row text-center">
