--- a/_includes/services.html
+++ b/_includes/services.html
@@ -23,7 +23,7 @@
                   />
                   <text x="18" y="20.35" class="percentage">90%</text>
                 </svg>
-                <div> Python</div>
+                <div class="single-chart-caption"> Python</div>
               </div>
 
               <div class="single-chart">
@@ -41,7 +41,7 @@
                   />
                   <text x="18" y="20.35" class="percentage">60%</text>
                 </svg>
-                <div> Python</div>
+                <div class="single-chart-caption">C/C++</div>
               </div>
 
               <div class="single-chart">
@@ -59,7 +59,7 @@
                   />
                   <text x="18" y="20.35" class="percentage">90%</text>
                 </svg>
-                <div class="single-chart-caption"> Python</div>
+                <div class="single-chart-caption">JAVA</div>
               </div>
             </div>
             <!-- <div class="row text-center">
