--- a/_includes/services.html
+++ b/_includes/services.html
@@ -62,118 +62,61 @@
                 <div class="single-chart-caption">JAVA</div>
               </div>
 
+            </div>
+            <div class="flex-wrapper">
+              <div class="single-chart">
+                <svg viewBox="0 0 36 36" class="circular-chart green">
+                  <path class="circle-bg"
+                    d="M18 2.0845
+                      a 15.9155 15.9155 0 0 1 0 31.831
+                      a 15.9155 15.9155 0 0 1 0 -31.831"
+                  />
+                  <path class="circle"
+                    stroke-dasharray="90, 100"
+                    d="M18 2.0845
+                      a 15.9155 15.9155 0 0 1 0 31.831
+                      a 15.9155 15.9155 0 0 1 0 -31.831"
+                  />
+                  <text x="18" y="20.35" class="percentage">90%</text>
+                </svg>
+                <div class="single-chart-caption"> Python</div>
+              </div>
 
-              <div class="flex-wrapper">
-                <div class="single-chart">
-                  <svg viewBox="0 0 36 36" class="circular-chart green">
-                    <path class="circle-bg"
-                      d="M18 2.0845
-                        a 15.9155 15.9155 0 0 1 0 31.831
-                        a 15.9155 15.9155 0 0 1 0 -31.831"
-                    />
-                    <path class="circle"
-                      stroke-dasharray="90, 100"
-                      d="M18 2.0845
-                        a 15.9155 15.9155 0 0 1 0 31.831
-                        a 15.9155 15.9155 0 0 1 0 -31.831"
-                    />
-                    <text x="18" y="20.35" class="percentage">90%</text>
-                  </svg>
-                  <div class="single-chart-caption">Javascript</div>
-                </div>
+              <div class="single-chart">
+                <svg viewBox="0 0 36 36" class="circular-chart blue">
+                  <path class="circle-bg"
+                    d="M18 2.0845
+                      a 15.9155 15.9155 0 0 1 0 31.831
+                      a 15.9155 15.9155 0 0 1 0 -31.831"
+                  />
+                  <path class="circle"
+                    stroke-dasharray="60, 100"
+                    d="M18 2.0845
+                      a 15.9155 15.9155 0 0 1 0 31.831
+                      a 15.9155 15.9155 0 0 1 0 -31.831"
+                  />
+                  <text x="18" y="20.35" class="percentage">60%</text>
+                </svg>
+                <div class="single-chart-caption">C/C++</div>
+              </div>
 
-                <div class="single-chart">
-                  <svg viewBox="0 0 36 36" class="circular-chart blue">
-                    <path class="circle-bg"
-                      d="M18 2.0845
-                        a 15.9155 15.9155 0 0 1 0 31.831
-                        a 15.9155 15.9155 0 0 1 0 -31.831"
-                    />
-                    <path class="circle"
-                      stroke-dasharray="60, 100"
-                      d="M18 2.0845
-                        a 15.9155 15.9155 0 0 1 0 31.831
-                        a 15.9155 15.9155 0 0 1 0 -31.831"
-                    />
-                    <text x="18" y="20.35" class="percentage">60%</text>
-                  </svg>
-                  <div class="single-chart-caption">C#</div>
-                </div>
-
-                <div class="single-chart">
-                  <svg viewBox="0 0 36 36" class="circular-chart blue">
-                    <path class="circle-bg"
-                      d="M18 2.0845
-                        a 15.9155 15.9155 0 0 1 0 31.831
-                        a 15.9155 15.9155 0 0 1 0 -31.831"
-                    />
-                    <path class="circle"
-                      stroke-dasharray="90, 100"
-                      d="M18 2.0845
-                        a 15.9155 15.9155 0 0 1 0 31.831
-                        a 15.9155 15.9155 0 0 1 0 -31.831"
-                    />
-                    <text x="18" y="20.35" class="percentage">90%</text>
-                  </svg>
-                  <div class="single-chart-caption">Xamarin</div>
-                </div>
-
-
-                <div class="flex-wrapper">
-                  <div class="single-chart">
-                    <svg viewBox="0 0 36 36" class="circular-chart green">
-                      <path class="circle-bg"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <path class="circle"
-                        stroke-dasharray="90, 100"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <text x="18" y="20.35" class="percentage">90%</text>
-                    </svg>
-                    <div class="single-chart-caption">Flask</div>
-                  </div>
-
-                  <div class="single-chart">
-                    <svg viewBox="0 0 36 36" class="circular-chart blue">
-                      <path class="circle-bg"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <path class="circle"
-                        stroke-dasharray="60, 100"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <text x="18" y="20.35" class="percentage">60%</text>
-                    </svg>
-                    <div class="single-chart-caption">ElasticSearch</div>
-                  </div>
-
-                  <div class="single-chart">
-                    <svg viewBox="0 0 36 36" class="circular-chart blue">
-                      <path class="circle-bg"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <path class="circle"
-                        stroke-dasharray="90, 100"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <text x="18" y="20.35" class="percentage">90%</text>
-                    </svg>
-                    <div class="single-chart-caption">AWS</div>
-                  </div>
-
+              <div class="single-chart">
+                <svg viewBox="0 0 36 36" class="circular-chart blue">
+                  <path class="circle-bg"
+                    d="M18 2.0845
+                      a 15.9155 15.9155 0 0 1 0 31.831
+                      a 15.9155 15.9155 0 0 1 0 -31.831"
+                  />
+                  <path class="circle"
+                    stroke-dasharray="90, 100"
+                    d="M18 2.0845
+                      a 15.9155 15.9155 0 0 1 0 31.831
+                      a 15.9155 15.9155 0 0 1 0 -31.831"
+                  />
+                  <text x="18" y="20.35" class="percentage">90%</text>
+                </svg>
+                <div class="single-chart-caption">JAVA</div>
+              </div>
 
             </div>
             <!-- <div class="row text-center">
