--- a/_includes/services.html
+++ b/_includes/services.html
@@ -63,7 +63,7 @@
               </div>
 
             </div>
-            <div class="flex-wrapper">
+            <!-- <div class="flex-wrapper"> -->
               <div class="single-chart">
                 <svg viewBox="0 0 36 36" class="circular-chart green">
                   <path class="circle-bg"
@@ -118,7 +118,7 @@
                 <div class="single-chart-caption">JAVA</div>
               </div>
 
-            </div>
+            <!-- </div> -->
             <!-- <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
