--- a/_includes/services.html
+++ b/_includes/services.html
@@ -21,9 +21,9 @@
                       a 15.9155 15.9155 0 0 1 0 31.831
                       a 15.9155 15.9155 0 0 1 0 -31.831"
                   />
-                  <text x="18" y="20.35" class="percentage">90%</text>
+                  <text x="18" y="20.35" class="percentage">Python</text>
                 </svg>
-                <div class="single-chart-caption"> Python</div>
+                <!-- <div class="single-chart-caption"> Python</div> -->
               </div>
 
               <div class="single-chart">
@@ -39,13 +39,13 @@
                       a 15.9155 15.9155 0 0 1 0 31.831
                       a 15.9155 15.9155 0 0 1 0 -31.831"
                   />
-                  <text x="18" y="20.35" class="percentage">60%</text>
+                  <text x="18" y="20.35" class="percentage">C/C++</text>
                 </svg>
-                <div class="single-chart-caption">C/C++</div>
+                <!-- <div class="single-chart-caption">C/C++</div> -->
               </div>
 
               <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart blue">
+                <svg viewBox="0 0 36 36" class="circular-chart orange">
                   <path class="circle-bg"
                     d="M18 2.0845
                       a 15.9155 15.9155 0 0 1 0 31.831
@@ -57,9 +57,9 @@
                       a 15.9155 15.9155 0 0 1 0 31.831
                       a 15.9155 15.9155 0 0 1 0 -31.831"
                   />
-                  <text x="18" y="20.35" class="percentage">90%</text>
+                  <text x="18" y="20.35" class="percentage">JAVA</text>
                 </svg>
-                <div class="single-chart-caption">JAVA</div>
+                <!-- <div class="single-chart-caption">JAVA</div> -->
               </div>
 
             <!-- </div> -->
@@ -77,9 +77,9 @@
                       a 15.9155 15.9155 0 0 1 0 31.831
                       a 15.9155 15.9155 0 0 1 0 -31.831"
                   />
-                  <text x="18" y="20.35" class="percentage">90%</text>
+                  <text x="18" y="20.35" class="percentage">Javascript</text>
                 </svg>
-                <div class="single-chart-caption"> Python</div>
+                <!-- <div class="single-chart-caption"> Python</div> -->
               </div>
 
               <div class="single-chart">
@@ -95,9 +95,9 @@
                       a 15.9155 15.9155 0 0 1 0 31.831
                       a 15.9155 15.9155 0 0 1 0 -31.831"
                   />
-                  <text x="18" y="20.35" class="percentage">60%</text>
+                  <text x="18" y="20.35" class="percentage">C#</text>
                 </svg>
-                <div class="single-chart-caption">C/C++</div>
+                <!-- <div class="single-chart-caption">C/C++</div> -->
               </div>
 
               <div class="single-chart">
@@ -113,9 +113,9 @@
                       a 15.9155 15.9155 0 0 1 0 31.831
                       a 15.9155 15.9155 0 0 1 0 -31.831"
                   />
-                  <text x="18" y="20.35" class="percentage">90%</text>
+                  <text x="18" y="20.35" class="percentage">Xamarin</text>
                 </svg>
-                <div class="single-chart-caption">JAVA</div>
+                <!-- <div class="single-chart-caption">JAVA</div> -->
               </div>
 
             </div>
