--- a/_includes/services.html
+++ b/_includes/services.html
@@ -7,7 +7,7 @@
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
-            <div class="flex-wrapper">
+            <div class="flex-wrapper col-md-3 col-sm-6">
               <div class="single-chart">
                 <svg viewBox="0 0 36 36" class="circular-chart green">
                   <path class="circle-bg"
@@ -62,8 +62,8 @@
                 <!-- <div class="single-chart-caption">JAVA</div> -->
               </div>
 
-            <!-- </div> -->
-            <!-- <div class="flex-wrapper"> -->
+            </div>
+            <div class="flex-wrapper col-md-3 col-sm-6">
               <div class="single-chart">
                 <svg viewBox="0 0 36 36" class="circular-chart green">
                   <path class="circle-bg"
