--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,7 +9,7 @@
             </div>
             <div class="flex-wrapper col-md-6 col-sm-6">
               <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart green">
+                <svg viewBox="0 0 36 36" class="circular-chart yellow">
                   <path class="circle-bg"
                     d="M18 2.0845
                       a 15.9155 15.9155 0 0 1 0 31.831
@@ -27,7 +27,7 @@
               </div>
 
               <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart blue">
+                <svg viewBox="0 0 36 36" class="circular-chart yellow">
                   <path class="circle-bg"
                     d="M18 2.0845
                       a 15.9155 15.9155 0 0 1 0 31.831
@@ -45,7 +45,7 @@
               </div>
 
               <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart orange">
+                <svg viewBox="0 0 36 36" class="circular-chart yellow">
                   <path class="circle-bg"
                     d="M18 2.0845
                       a 15.9155 15.9155 0 0 1 0 31.831
@@ -65,7 +65,7 @@
             </div>
             <div class="flex-wrapper col-md-6 col-sm-6">
               <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart green">
+                <svg viewBox="0 0 36 36" class="circular-chart yellow">
                   <path class="circle-bg"
                     d="M18 2.0845
                       a 15.9155 15.9155 0 0 1 0 31.831
@@ -83,7 +83,7 @@
               </div>
 
               <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart blue">
+                <svg viewBox="0 0 36 36" class="circular-chart yellow">
                   <path class="circle-bg"
                     d="M18 2.0845
                       a 15.9155 15.9155 0 0 1 0 31.831
@@ -101,7 +101,7 @@
               </div>
 
               <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart blue">
+                <svg viewBox="0 0 36 36" class="circular-chart yellow">
                   <path class="circle-bg"
                     d="M18 2.0845
                       a 15.9155 15.9155 0 0 1 0 31.831
