--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -2,26 +2,26 @@
     <aside class="clients">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-6 col-sm-6">
                     <a href="#">
                         <img src="img/about/1.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-6 col-sm-6">
                     <a href="#">
                         <img src="img/about/2.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <!-- <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/about/1.jpg" class="img-responsive img-centered" alt="">
                     </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
+                </div> -->
+                <!-- <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/about/1.jpg" class="img-responsive img-centered" alt="">
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </aside>
