--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,10 +7,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-6">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-12">
                                 <div class="control-group form-group">
                                     <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name." value="Akash Jain" disabled>
                                     <p class="help-block text-danger"></p>
@@ -24,12 +24,12 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
-                            <!-- <div class="col-md-6">
+                            <div class="col-md-6">
                                 <div class="control-group form-group">
                                     <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
-                            </div> -->
+                            </div>
                             <div class="clearfix"></div>
                             <!-- <div class="col-lg-12 text-center">
                                 <div id="success"></div>
