--- a/_includes/about.html
+++ b/_includes/about.html
@@ -89,7 +89,7 @@
                                     <h4 class="subheading">Manipal Institute of Technology, Karnataka</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Bachelor of Technology</p>
+                                    <p class="text-muted">Bachelor of Technology (B.Tech.)</p>
                                     <p class="text-muted">Computer Science</p>
                                     <p class="text-muted">CGPA: 8.45</p>
                                 </div>
@@ -105,7 +105,7 @@
                                     <h4 class="subheading">St. Joseph's School, Bhagalpur</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Senior Secondary(XII)</p>
+                                    <p class="text-muted">Senior Secondary School(XII)</p>
                                 </div>
                             </div>
                         </li>
@@ -119,7 +119,7 @@
                                     <h4 class="subheading">St. Joseph's School, Bhagalpur</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Metric (X)</p>
+                                    <p class="text-muted">Secondary School (X)</p>
                                 </div>
                             </div>
                         </li>
