--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -130,11 +130,15 @@ fieldset[disabled] .btn-primary.active {
     background-color: #{{ site.data.template.color.primary }};
 }
 .img-circle {
-    transition: all .2s ease-in-out;
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
 
 .img-circle:hover {
-    transform: scale(1.1);
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
 }
 
 .btn-xl:hover,
