--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="intro-text">
 				<div class="timeline-image">
-					<img class="img-circle img-responsive" src="img/team/profile_pic.jpg" alt="">
+					<figure><img class="img-circle img-responsive" src="img/team/profile_pic.jpg" alt=""><figure>
 				</div>
                 <div class="intro-lead-in">Akash Jain</div>
                 <div class="intro-heading-v2">Lead Software Developer
