--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -129,6 +129,21 @@ fieldset[disabled] .btn-primary.active {
     color: #fff;
     background-color: #{{ site.data.template.color.primary }};
 }
+
+
+figure {
+	width: 300px;
+	height: 200px;
+	margin: 0;
+	padding: 0;
+	background: #fff;
+	overflow: hidden;
+}
+figure:hover+span {
+	bottom: -36px;
+	opacity: 1;
+}
+
 .img-circle {
 	-webkit-transform: scale(1);
 	transform: scale(1);
@@ -137,8 +152,8 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .img-circle:hover {
-	-webkit-transform: scale(1.3);
-	transform: scale(1.3);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .btn-xl:hover,
