--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <ul class="timeline">
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <figure><img class="img-circle img-responsive" src="img/about/1.jpg" alt=""></figure>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -38,7 +38,7 @@
                         </li>
                             <li>
                                 <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                    <figure><img class="img-circle img-responsive" src="img/about/1.jpg" alt=""></figure>
                                 </div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
@@ -66,7 +66,7 @@
                             </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <figure><img class="img-circle img-responsive" src="img/about/2.jpg" alt=""></figure>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -81,7 +81,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <figure><img class="img-circle img-responsive" src="img/about/3.jpg" alt=""></figure>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -97,7 +97,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <figure><img class="img-circle img-responsive" src="img/about/4.jpg" alt=""></figure>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -111,7 +111,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <figure><img class="img-circle img-responsive" src="img/about/4.jpg" alt=""></figure>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
