--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -132,12 +132,8 @@ fieldset[disabled] .btn-primary.active {
 
 
 figure {
-	width: 300px;
-	height: 200px;
-	margin: 0;
-	padding: 0;
-	background: #fff;
 	overflow: hidden;
+  border-radius: 50%;
 }
 figure:hover+span {
 	bottom: -36px;
