--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
                 <div class="intro-heading-v2">Lead Software Developer
                   <ul class="list-inline social-buttons">
                       <li>
-                          <a href="#" class="facebook">
+                          <a href="https://www.facebook.com/akash.jain.3511" target="_blank" class="facebook">
                               <i class="fa fa-facebook"></i>
                           </a>
                       </li>
