--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -922,7 +922,7 @@ ul.social-buttons li a.linkedin:active {
 }
 
 .portfolio-modal .close-modal {
-    position: absolute;
+    position: fixed;
     top: 25px;
     right: 25px;
     width: 75px;
