--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -1211,6 +1211,8 @@ body {
 }
 
 .single-chart:hover {
+  stroke-width: 2.8;
+  stroke-width: 1.8;
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
 }
