--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -1225,9 +1225,9 @@ body {
   stroke-width: 2.8;
 } */
 
-.single-chart:hover .percentage {
+/* .single-chart:hover .percentage {
   font-size: 0.45em;
-}
+} */
 
 
 .single-chart-caption {
